--- a/css/style.css
+++ b/css/style.css
@@ -30,14 +30,49 @@ body {
 	align-items: center;
 	justify-content: center;
 	width: 50%;
+
 }
 
 .instagram-phone img{
 	height: 50rem;
+	margin-right: 50px;
 }
 
 .instagram-login {
 	display: flex;
 	align-items: center;
 	justify-content: space-around;
+	flex-direction: column;
+	min-height:  34rem;
+}
+
+.group {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: column;
+	background-color: #ffffff;
+	width: 100%;
+	padding: 1.3rem 0;
+	border: 1px solid lightgray;
+}
+
+.group:nth-child(1){
+	min-height: 19rem;
+}
+
+.instagram-logo {
+	height: 3rem;
+}
+
+.avatar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	overflow: hidden;	
+}
+
+.avatar img {
+	height: 6rem;
 }
