--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,10 @@
 body {
 	width: 100%;
 	min-height: 100vh;
-	background-color: white;
+	background-color: rgb(243, 243, 243);
 	margin: 0;
 	padding: 0;
-	display: flex;
+	display: flex; /* conteiner flex = tudo que tiver dentro fica em linha ocupando todo o espaço necessario*/
 	justify-content: center;
 }
 
@@ -25,7 +25,7 @@ body {
 	height: 100vh;
 }
 
-.instragram-phone {
+.instagram-phone {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -35,14 +35,14 @@ body {
 
 .instagram-phone img{
 	height: 50rem;
-	margin-right: 50px;
 }
 
-.instagram-login {
+.instagram-continue {
 	display: flex;
-	align-items: center;
-	justify-content: space-around;
+	align-items: center; /* horizontal */ 
+	justify-content: space-around; /* vertical */
 	flex-direction: column;
+	width: 50%;
 	min-height:  34rem;
 }
 
@@ -65,7 +65,7 @@ body {
 	height: 3rem;
 }
 
-.avatar {
+.profile-photo {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -73,6 +73,57 @@ body {
 	overflow: hidden;	
 }
 
-.avatar img {
+.profile-photo img {
 	height: 6rem;
+}
+
+.instagram-login {
+	background-color: #0095f6;
+	color: #ffffff;
+	padding: 8px;
+	border-right: 4px;	
+}
+
+.instagram-logout {
+	color: #0095f6;
+	margin-top: 1rem;
+}
+
+.not-account {
+	color: rgb(160, 160, 160);
+}
+
+.link-blue {
+	color: #0095f6;
+}
+
+.get-the-app {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	padding: 1.3rem 0;
+}
+
+.donwload {
+	display: flex;
+	width: 100%;
+	justify-content: space-evenly;
+	align-items: center;
+	padding: 1rem;
+}
+
+.get-donwload {
+	height: 3rem;
+	width: 10rem;
+	background-size: cover;	
+}
+
+.app-download:nth-child(1){
+	background-image: url('./img/app-store.png');
+}
+
+.app-download:nth-child(2){
+	background-image: url('./img/google-play.png');
 }
